--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -17,8 +17,6 @@ body {
   padding: 28px 39px 0 39px;
   color:$grisClaroTexto;
 
-  background: url(../images/bg.jpg);
-  background-size: 100%;
   font-size: 11px;
   line-height: 13px;
 }
@@ -273,6 +271,7 @@ span.field-label {
  */
 
 #footer {
+  margin-top: 12px;
 }
 
 /*
@@ -285,6 +284,15 @@ span.field-label {
 
 /*HOME PAGE*/
 .front {
+  
+  #footer{
+    float: left;
+    width: 100%;
+    margin-top: 125px;  
+  }
+  
+  background: url(../images/bg.jpg);
+  background-size: 100%;
   #page{
     max-width: 1000px;
     position: relative;
@@ -469,11 +477,11 @@ span.field-label {
 }
 
 /*BASIC PAGES STYLES*/
-.node-type-page{
+.node-type-page, .node-type-team-member{
 
   #main{
-    padding-top: 82px;
-    padding-bottom: 82px;
+    padding-top: 55px;
+    padding-bottom: 65px;
     background: url(../images/green-bg.png);
     position: relative;
     text-align: center;
@@ -481,21 +489,21 @@ span.field-label {
   }
 
   .inner-content{
-    width: auto;
+    width: 90%;
     display: inline-block;
     text-align: left;
 
     .image{
-
+      float: left;
+      padding-right: 3%;
       text-align: center;
-      width: 490px;
-      float:left;
-
+      width: 54%;
     }
 
     .body{
-      float:left;
-      width: 370px;
+      float: left;
+      width: 39%;
+      font-size: 12px;
 
       a{
         text-decoration: none;
@@ -506,7 +514,7 @@ span.field-label {
       }
       .column-1{
         float:left;
-        width:46%;
+        width:38%;
 
 
       }
@@ -522,35 +530,34 @@ span.field-label {
 
   }
 }
+
 .node-type-team-member{
   h1{
     margin-bottom: 5px;
   }
   #main{
-    padding-top: 82px;
-    padding-bottom: 82px;
-    background: url(../images/green-bg.png);
-    position: relative;
-    text-align: center;
 
   }
 
   #content{
-    width: auto;
-    display: inline-block;
-    text-align: left;
+     .node-team-member{
+       width: 90%;
+       margin: 0 auto;
+     }
 
     .group-left{
-
+      float: left;
+      padding-right: 3%;
       text-align: center;
-      width: 520px;
-      float:left;
+      width: 54%;
 
     }
 
     .group-right{
-      float:left;
-      width: 170px;
+      float: left;
+      font-size: 12px;
+      width: 16%;
+      text-align: left;
 
       a{
         text-decoration: none;
