--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -579,6 +579,14 @@ span.field-label {
 }
 
 
+/** CONTACT **/
+.page-node-5{
+  .column{
+    background: rgba(220,58,27,0.4);
+  }
+}
+
+
 
 /** Media Querys  **/
   
