--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -655,6 +655,16 @@ span.field-label {
 }
 
 
+/** FAQ **/
+.page-node-18{
+  #main{
+    background: rgba(220,58,27,0.4);
+    margin-bottom:8px;
+  }
+}  
+
+
+
 
 /** Media Querys  **/
   
