--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -658,9 +658,39 @@ span.field-label {
 /** FAQ **/
 .page-node-18{
   #main{
-    background: rgba(220,58,27,0.4);
+    background: rgba(237,141,27,0.2);
     margin-bottom:8px;
   }
+  .view-mode-full{
+    text-align: center;
+    
+    .wrapper{
+      width: 80%;
+      display: inline-block;
+      
+      .field-name-body{
+        width: 30%;
+        float: left;
+        text-align: left;
+        margin-right: 10%;
+        font-size: 12px;
+      }
+      
+      .faq-block-wrapper{
+        width: 30%;
+        float: left;
+        text-align: left;
+        font-size: 12px;
+        
+        .faq-link{
+          text-decoration: none;
+          display: block;
+        }
+      }
+      
+    }
+  }
+  
 }  
 
 
