--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -742,7 +742,80 @@ span.field-label {
     }
   }
   
-}  
+}
+
+.page-node-25{
+   #main{
+     background: rgba(83,50,128,0.2);
+     
+     #content{
+       padding: 0 27%;
+       
+       .views-row{
+         float: left;
+         width: 45%;
+         margin-right: 5%;
+         text-align: left;
+         margin-bottom: 25px;
+         font-size: 12px;
+         
+         .views-field-title{
+           font-size: 17px;
+           margin-bottom: 15px;
+         }
+         
+         .views-field-nothing a{
+           text-decoration: none;
+           color: #686967;
+           display: block;
+           margin-top: 14px;
+           font-size: 21px;
+         }
+         
+       }
+       
+       .views-row.views-row-even{
+         margin-right: 0;
+       }
+       
+       
+       
+       
+     }
+     
+   }
+   .things_menu ul{
+      float: right;
+      background: url("../images/things_menu.jpg") repeat-x top left rgba(83,50,128,0.2);
+      padding-top: 8px;
+      padding-left: 0;
+
+      
+      li{
+        list-style-type: none;
+        float: left;
+        
+        a{
+          display: block;
+          padding: 45px 35px;
+          text-decoration: none;
+          color: #fff;
+          font-size: 21px;
+          font-family: $cursiva;
+          text-align: center;
+          
+          img{
+            margin-bottom: 15px;
+          }
+        }
+      }
+      
+      .active a{
+        background: #533280;
+      }
+      
+    }
+ }
 
 
 
@@ -1325,12 +1398,60 @@ span.field-label {
       }
     }
     
-  }  
+  }
+  
+  
+  .page-node-25{
+     #main{
+       background: rgba(83,50,128,0.2);
+       
+       #content{
+         padding: 0 10%;
+         
+         .views-row{
+           width: 100%;
+           margin-right: 0;
+           text-align: center;
+           margin-bottom: 50px;
+           
+           .views-field-title{
+             text-align: center;
+           }
+           
+           .views-field-nothing a{
+
+           }
+           
+         }
+         
+         .views-row.views-row-even{
+           margin-right: 0;
+         }
+         
+         
+         
+         
+       }
+       
+     }
+     .things_menu ul{
+        width: 100%;
+  
+        
+        li{
+          width: 33%;
+          
+          a{
+            padding: 45px 0;
+          }
+        }
+
+        
+      }
+   }
   
   
 }
-
-  
   
  
 /* Landscape phones and down */
